[tool.poetry]
name = "overhave"
version = "1.2.0"
description = "Overhave - web-framework for BDD"
readme = "README.rst"
authors = [
    "Vladislav Mukhamatnurov <livestreamepidemz@yandex.ru>",
    "Tinkoff Dialog System Backend Team <bds-dev@tinkoff.ru>"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Framework :: Pytest",
]

[tool.poetry.scripts]
overhave = 'overhave.cli:overhave'

[tool.poetry.plugins.pytest11]
overhave = "overhave.testing.plugin"

[tool.poetry.dependencies]
python = "^3.8"
sqlalchemy = "^1.3.3"
psycopg2-binary = "^2.8"
click = "^7.0"
pydantic = ">=1.7"
requests = ">=2.0.0"
tenacity = "*"
sqlalchemy_utils = "^0.34.0"
yarl = "<=1.1.1"
pytz = "^2019.1"
gunicorn = "^20.0.4"
flask-admin = "^1.5"
flask-login = "^0.4.1"
WTForms = "^2.2"
Flask-WTF = "^0.14.2"
python-ldap = "^3.2"
ldap3 = "^2.6"
wsgi_intercept = "^1.8"
redis = "^3.4.1"
walrus = "^0.8.0"
docker = "*"
pydantic-sqlalchemy = "^0.0.6"
sqlalchemy-utc = "0.10.0"
Jinja2 = "^2.11.2"
httptools = "^0.1.1"
python-dateutil = "^2.8.1"
alembic = "^1.4.3"


[tool.poetry.dev-dependencies]
black = "^19.3b0"
flake8-awesome = "<1.3"
pylint = "^2.3"
requests_mock = "*"
teamcity-messages = "^1.25"
flake8-docstrings = "^1.5"
transliterate = "^1.10"
pytest-faker = "^2.0"
sqlalchemy-diff = "^0.1.3"
mypy = "^0.761"
gitpython = "^3.0.5"
filelock = "*"
pytest-bdd = "^4.0.2"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-deadfixtures = "^2.2.1"
pytest-mock = "^3.3.1"
pytest-random-order = "^1.0.4"
allure-pytest = "^2.8.24"
pytest-xdist = "^2.2.0"
tox = "^3.20.1"
twine = "^3.3.0"
Sphinx = "^3.4.3"

[tool.pytest.ini_options]
addopts = "-l -v --random-order-bucket=module --random-order-seed=$RANDOM -p no:overhave"
testpaths = "tests"
python_files = ["test_*.py"]
python_classes = ["*Test", "Test*"]
python_functions = ["test_*"]
filterwarnings = ["ignore::DeprecationWarning:sqlalchemy_utils.observer"]
xfail_strict=true

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["docker", "docs", "overhave", "tests"]
line_length = 120
multi_line_output = 3

[tool.black]
target-version = ['py38']
line-length = 120

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
isolated_build_env = .package
envlist = py38

[testenv]
whitelist_externals =
    make
venv = {toxworkdir}/{[tox]isolated_build_env}
setenv =
    VENV = {[testenv]venv}
    WORK_DIR = {toxworkdir}
passenv =
    OVERHAVE_DB_URL
commands =
    make check
"""
