[tool.poetry]
name = "overhave"
version = "3.5.0"
description = "Overhave - web-framework for BDD"
readme = "README.rst"
authors = [
    "Vladislav Mukhamatnurov <livestreamepidemz@yandex.ru>",
    "Tinkoff Backend Dialog System Team <bds-dev@tinkoff.ru>"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: OS Independent",
    "Framework :: Flask",
    "Framework :: Pytest",
]

[tool.poetry.scripts]
overhave = 'overhave.cli:overhave'
overhave-demo = 'demo:overhave_demo'

[tool.poetry.plugins.pytest11]
overhave = "overhave.pytest_plugin.plugin"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
sqlalchemy = ">=1.3.23"
psycopg2-binary = "^2.8"
pydantic = ">=1.7"
requests = ">=2.0.0"
tenacity = "*"
yarl = ">=1.1.1"
pytz = "*"
flask-admin = ">=1.5"
WTForms = ">=2.2"
Flask-WTF = ">=0.14.2"
python-ldap = "^3.2"
ldap3 = "^2.6"
wsgi_intercept = "^1.8"
redis = "^4.2.0"
walrus = "^0.8.0"
docker = "*"
sqlalchemy-utc = "^0.14.0"
httptools = "^0.1.1"
python-dateutil = "^2.8.1"
alembic = "^1.4.3"
boto3 = "^1.17.16"
boto3-type-annotations = "^0.3.1"
SQLAlchemy-Utils = "^0.37.0"
Flask = "^2.0.1"
GitPython = "^3.1.15"
python-gitlab = "^2.9.0"
pydantic-sqlalchemy = "^0.0.9"
fastapi = ">=0.57.0"
typer = "^0.4.0"
Flask-Login = "^0.6.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.5"


[tool.poetry.dev-dependencies]
flake8-awesome = "<1.3"
requests_mock = "*"
flake8-docstrings = "^1.5"
pytest-faker = "^2.0"
filelock = "*"
pytest-cov = "^2.10.1"
pytest-deadfixtures = "^2.2.1"
pytest-random-order = "^1.0.4"
tox = "^3.24.4"
twine = "^3.3.0"
Sphinx = "^4.4.0"
mypy-extensions = "^0.4.3"
alchemy-mock = "^0.4.3"
coverage = {version = "^6.0.1", extras = ["toml"]}
pytest-mock = "^3.6.1"
pytest = "^6.2.5"
allure-pytest = "^2.9.45"
pytest-xdist = "^2.5.0"
uvicorn = "^0.17.5"
black = "^22.1.0"
coverage-badge = "^1.1.0"
pytest-bdd = "^6.0.1"
mypy = "^0.971"

[tool.pytest.ini_options]
addopts = "-l -v --random-order-bucket=module --random-order-seed=$RANDOM -p no:overhave"
testpaths = "tests"
python_files = ["test_*.py"]
python_classes = ["*Test", "Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning:sqlalchemy_utils.observer",
]
xfail_strict=true

[tool.coverage.run]
omit = [
    "**/__main__.py",
    "*_cache/*",
    ".pytest_cache",
    "overhave/cli/*"
]

[tool.isort]
balanced_wrapping = true
default_section = "THIRDPARTY"
include_trailing_comma = true
known_first_party = ["docker", "docs", "overhave", "tests", "demo"]
line_length = 120
multi_line_output = 3

[tool.black]
target-version = ['py310']
line-length = 120

[build-system]
requires = ["poetry>=1.1.8"]
build-backend = "poetry.core.masonry.api"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
isolated_build_env = .package
envlist = py310
[testenv]
whitelist_externals =
    make
venv = {toxworkdir}/{[tox]isolated_build_env}
setenv =
    VENV = {[testenv]venv}
    WORK_DIR = {toxworkdir}
passenv =
    OVERHAVE_DB_URL
commands =
    make check
"""
